# learning_slam

./: .gitignore  README.md
chapter3/: 3_5.cpp  chapter3.md  try.cpp
chapter4/: chapter4.md
chapter5/: chapter5.md
chapter6/: chapter6.md
direct_odom/: CMakeLists.txt  dense.cc  readme.md  sparse.cc  time_align.py
direct_odom/poses/: dense.txt  gt.txt  sparse_patt_1.txt  sparse_patt_8.txt
event_motion/: gen_noise.py  readme.md  task1.py  task2.py  task3.py  verify.py
event_motion/data/: data_package2.txt  data_package3.txt
eventail/: task1.py  task2.py
eventail/data/: data_package1.txt  data_package3.txt
mcl_slam/: 2gif.py  README.md  config.yaml  kld_mcl.py  mcl.py  vis_process.py
mcl_slam/data/hw2_data/: hw2_data.db3
monte_carlo_localization/: kld_mcl.py
monte_carlo_localization/data/: about.md
monte_carlo_localization/data/hw2_data/: metadata.yaml
pkgs/: readme.md
pose-graph/: pose-graph-1.md
pose-graph/project/: 2tum.cc  absolute_poses_tum.txt  ape.py  hw1_data.txt  information_matrix.txt  optimize.cc  readme.md  relative_poses_tum.txt
pose-graph/project/g2o-optimize/: g2o_opt.cc
pose-graph/project/poses/: gt_tum.txt
pose-graph/scale-aware/: CMakeLists.txt  Lie.h  data.md  rank.py  scale_drift.cc  vis.py
pose-graph/scale-aware/data/scale_drift_circle/: GT.txt  nodes.txt
pose_graph/: 2tum.cc  gen_gt.py  optimize.cc  readme.md  visualize_h.py
pose_graph/g2o-optimize/: CMakeLists.txt  g2o_opt.cc
pose_graph/poses/: gt_tum.txt  opt_tum.txt  slam_tum.txt
rigid-transform/: readme.md
rigid-transform/2d/: CMakeLists.txt  readme.md  se2.cc
scale_aware_pose_graph/: CMakeLists.txt  readme.md  scale_jump.cc  vis.py
scale_aware_pose_graph/data/scale_drift_circle/: GT.txt  edges.txt  nodes.txt
scale_aware_pose_graph/data/scale_jump_circle3/: GT.txt  edges.txt  nodes.txt
scale_aware_pose_graph/data/scale_jump_circle4/: GT.txt  edges.txt  nodes.txt
scale_aware_pose_graph/poses/scale_drift/: edges__tum.txt  gt__tum.txt
scale_aware_pose_graph/poses/scale_jump_3/: gt__tum.txt
(+10 files in other folders)
